@@ -46,12 +46,14 @@ typedef enum joystick_type_t {
   
   JOYSTICK_TYPE_CURSOR,
   JOYSTICK_TYPE_KEMPSTON,
+  JOYSTICK_TYPE_SINCLAIR_1,
+  JOYSTICK_TYPE_SINCLAIR_2,
   JOYSTICK_TYPE_TIMEX_1,
   JOYSTICK_TYPE_TIMEX_2,
 
 } joystick_type_t;
 
-#define JOYSTICK_TYPE_COUNT 5
+#define JOYSTICK_TYPE_COUNT 7
 
 extern const char *joystick_name[];
 
